work in progress: table selection handling